# ruscrypt

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: demo.rs  quick_start.rs
src/: cli.rs  dispatcher.rs  interactive.rs  lib.rs  main.rs  utils.rs
src/asym/: dh.rs  mod.rs  rsa.rs
src/block/: aes.rs  des.rs  mod.rs
src/classical/: caesar.rs  mod.rs  playfair.rs  rail_fence.rs  vigenere.rs
src/hash/: md5.rs  mod.rs  sha1.rs  sha256.rs
src/stream/: mod.rs  rc4.rs
src/tests/: asym.rs  block.rs  classical.rs  hash.rs  mod.rs  stream.rs
