[package]
name = "ruscrypt"
version = "0.1.2"
edition = "2021"
authors = ["Adel2411 <your-email@example.com>"]
description = "⚡ Lightning-fast cryptography toolkit built with Rust - A comprehensive CLI tool for classical and modern cryptographic operations"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Adel2411/ruscrypt"
repository = "https://github.com/Adel2411/ruscrypt"
documentation = "https://docs.rs/ruscrypt"
keywords = ["cryptography", "encryption", "hash", "cli", "security"]
categories = ["command-line-utilities", "cryptography"]
exclude = [
    "target/*",
    ".git/*",
    ".gitignore",
]

# Specify both library and binary
[lib]
name = "ruscrypt"
path = "src/lib.rs"

[[bin]]
name = "ruscrypt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
base64 = "0.22.1"
clap = { version = "4.3.19", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
rand = "0.9.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
